# to-do-list

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  models.py
app/routers/endpoints/: __init__.py  create_a_todo.py  delete_a_todo.py  get_todo_by_id.py  list_all_tasks.py  todos.py  update_a_todo.py
