[build-system]
requires = ["uv_build >= 0.8.17, <0.9.0"]
build-backend = "uv_build"

[project]
name = "to-do-list"
version = "0.1.0"  
description = "A simple to-do list application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi >= 0.95.0, < 0.96.0",
    "uvicorn[standard] >= 0.22.0",
    "debugpy >= 1.8.13",
]
