[build-system]
requires = ["uv_build >= 0.8.17, <0.9.0"]
build-backend = "uv_build"

[project]
name = "to-do-list"
version = "0.1.0"  
description = "A simple to-do list application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi >= 0.95.0, < 0.96.0",
    "uvicorn[standard] >= 0.22.0",
    "debugpy >= 1.8.13",
    "ruff >= 0.14.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
detect-same-package = true
force-sort-within-sections = true
combine-as-imports = true

